--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "illuminate/collections": "^11.0"
+        "php": "^8.1",
+        "illuminate/container": "^8.12|^9.0|^10.0"
     }
 }
